configure an initial design system, with manage multiple package

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "yarn lerna run build"
+    "build": "yarn lerna run build",
+    "dev": "yarn lerna run dev"
   },
   "workspaces": {
     "packages": [
       "packages/*",
-      "playgrounds/*"
+      "playgrounds"
     ]
   },
   "devDependencies": {
