--- a/packages/sync-ui-react/package.json
+++ b/packages/sync-ui-react/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c "
+    "build": "rollup -c ",
+    "dev": "yarn build --watch"
   },
   "dependencies": {
     "@sync-workspace/sync-ui": "1.0.0"
